<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MovieListFragment">

    <fragment
        android:id="@+id/FragmentLogin"
        android:name="com.mstefanc.moviesapp.auth.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/MovieListFragment"
        android:name="com.mstefanc.moviesapp.moviepack.movies.MovieListFragment"
        android:label="@string/movie_list_fragment_label"
        tools:layout="@layout/fragment_movie_list" >

        <action
            android:id="@+id/action_MovieListFragment_to_MovieEditFragment"
            app:destination="@id/MovieEditFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/slide_in"
            app:popExitAnim="@anim/fade_out"/>
    </fragment>

    <fragment
        android:id="@+id/MovieEditFragment"
        android:name="com.mstefanc.moviesapp.moviepack.movie.MovieEditFragment"
        android:label="@string/movie_edit_fragment_label"
        tools:layout="@layout/fragment_movie_edit" >

        <action
            android:id="@+id/action_MovieEditFragment_to_MovieListFragment"
            app:destination="@id/MovieListFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/slide_in"
            app:popExitAnim="@anim/fade_out"/>
    </fragment>
</navigation>